--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.tailwindcss.com"></script>
 
-<!-- Firebase COMPAT (WAJIB) -->
+<!-- Firebase COMPAT -->
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-database-compat.js"></script>
@@ -17,7 +17,7 @@
 <h1 class="text-green-400 text-3xl font-bold">😈 Ultra Degen Farmer</h1>
 <p id="today" class="text-slate-400 mb-4"></p>
 
-<!-- AUTH -->
+<!-- ================= AUTH ================= -->
 <div id="authBox" class="bg-slate-900 p-4 rounded-xl mb-4">
   <h3 class="font-bold mb-2">🔐 Login / Signup</h3>
   <input id="email" class="w-full p-2 rounded text-black mb-2" placeholder="Email">
@@ -26,68 +26,26 @@
   <button onclick="signin()" class="bg-green-500 w-full py-2 rounded font-bold">Signin</button>
 </div>
 
-<!-- APP -->
+<!-- ================= APP ================= -->
 <div id="app" class="hidden">
 
 <button onclick="logout()" class="text-red-400 text-sm mb-3">Logout</button>
 
-  <!-- MODAL -->
-<div id="taskModal"
-  class="fixed inset-0 bg-black/70 hidden flex items-center justify-center z-50">
-
-  <div class="bg-slate-900 p-5 rounded-xl w-full max-w-md mx-4">
-    <h3 class="font-bold mb-3 text-lg">➕ Tambah Garapan</h3>
-
-    <input id="taskName" class="w-full p-2 rounded text-black mb-2"
-      placeholder="Nama Airdrop">
-
-    <input id="taskWallet" class="w-full p-2 rounded text-black mb-2"
-      placeholder="Wallet / Label">
-
-    <input id="taskLink" class="w-full p-2 rounded text-black mb-2"
-      placeholder="Link (opsional)">
-
-    <select id="taskType" class="w-full p-2 rounded text-black mb-3">
-      <option value="testnet">Testnet</option>
-      <option value="point">Point</option>
-      <option value="social">Social</option>
-      <option value="retro">Retro</option>
-      <option value="other">Other</option>
-    </select>
-    
-    <textarea id="taskNote"
-      class="w-full p-2 rounded text-black mb-3"
-      placeholder="Keterangan (opsional)"></textarea>
-
-    <div class="flex gap-2">
-      <button onclick="submitTask()"
-        class="bg-green-500 flex-1 py-2 rounded font-bold">
-        Simpan
-      </button>
-
-      <button onclick="closeModal()"
-        class="bg-slate-700 flex-1 py-2 rounded">
-        Batal
-      </button>
-    </div>
-  </div>
-</div>
-
-<!-- ADD TASK -->
-<button onclick="openModal()"
+<!-- ➕ ADD BUTTON -->
+<button onclick="openAddModal()"
   class="bg-green-500 w-full py-3 rounded-xl font-bold mb-4">
   ➕ Tambah Garapan
 </button>
 
-<!-- TASK LIST -->
-<div class="overflow-x-auto">
+<!-- ================= TABLE ACTIVE ================= -->
+<div class="bg-slate-900 p-4 rounded-xl mb-4 overflow-x-auto">
   <table class="w-full text-sm border border-slate-700">
     <thead class="bg-slate-800">
       <tr>
         <th class="p-2">No</th>
-        <th class="p-2 text-left">Nama Garapan</th>
+        <th class="p-2 text-left">Nama</th>
         <th class="p-2">Link</th>
-        <th class="p-2">Category</th>
+        <th class="p-2">Kategori</th>
         <th class="p-2">Keterangan</th>
         <th class="p-2">Aksi</th>
       </tr>
@@ -96,22 +54,15 @@
   </table>
 </div>
 
-<!-- HEATMAP -->
-<div class="bg-slate-900 p-4 rounded-xl mb-4">
-  <h3 class="font-bold mb-2">📅 Heatmap Bulanan</h3>
-  <div id="monthHeatmap" class="grid grid-cols-3 gap-3"></div>
-</div>
-
-<!-- Completed -->
+<!-- ================= COMPLETED ================= -->
 <h3 class="font-bold mt-6 mb-2 text-green-400">✅ Completed</h3>
-
-<div class="overflow-x-auto">
+<div class="overflow-x-auto mb-6">
   <table class="w-full text-sm border border-slate-700">
     <thead class="bg-slate-800">
       <tr>
         <th class="p-2">No</th>
-        <th class="p-2 text-left">Nama Garapan</th>
-        <th class="p-2">Category</th>
+        <th class="p-2 text-left">Nama</th>
+        <th class="p-2">Kategori</th>
         <th class="p-2">Keterangan</th>
       </tr>
     </thead>
@@ -119,7 +70,13 @@
   </table>
 </div>
 
-<!-- REMINDER -->
+<!-- ================= HEATMAP ================= -->
+<div class="bg-slate-900 p-4 rounded-xl mb-4">
+  <h3 class="font-bold mb-2">📅 Heatmap Bulanan</h3>
+  <div id="monthHeatmap" class="grid grid-cols-3 gap-3"></div>
+</div>
+
+<!-- ================= REMINDER ================= -->
 <div class="bg-slate-900 p-4 rounded-xl mb-4">
   <h3 class="font-bold mb-2">🧠 Reminder Farming</h3>
   <input type="time" id="reminderTime" class="w-full p-2 rounded text-black mb-2">
@@ -128,18 +85,42 @@
   </button>
 </div>
 
-<!-- CSV -->
+<!-- ================= CSV ================= -->
 <div class="bg-slate-900 p-4 rounded-xl mb-10">
   <h3 class="font-bold mb-2">📤 Import / Export</h3>
   <input type="file" id="csvFile" accept=".csv" class="mb-2">
-  <button onclick="importCSV()" class="bg-blue-500 w-full py-2 rounded font-bold mb-2">
-    Import CSV
-  </button>
-  <button onclick="exportCSV()" class="bg-green-500 w-full py-2 rounded font-bold">
-    Export CSV
-  </button>
+  <button onclick="importCSV()" class="bg-blue-500 w-full py-2 rounded font-bold mb-2">Import CSV</button>
+  <button onclick="exportCSV()" class="bg-green-500 w-full py-2 rounded font-bold">Export CSV</button>
 </div>
 
+</div>
+
+<!-- ================= MODAL ================= -->
+<div id="taskModal"
+  class="fixed inset-0 bg-black/70 hidden flex items-center justify-center z-50">
+  <div class="bg-slate-900 p-5 rounded-xl w-full max-w-md mx-4">
+    <h3 id="modalTitle" class="font-bold mb-3 text-lg"></h3>
+
+    <input id="taskName" class="w-full p-2 rounded text-black mb-2" placeholder="Nama Garapan">
+    <input id="taskWallet" class="w-full p-2 rounded text-black mb-2" placeholder="Wallet / Label">
+    <input id="taskLink" class="w-full p-2 rounded text-black mb-2" placeholder="Link (opsional)">
+
+    <select id="taskType" class="w-full p-2 rounded text-black mb-2">
+      <option value="testnet">Testnet</option>
+      <option value="point">Point</option>
+      <option value="social">Social</option>
+      <option value="retro">Retro</option>
+      <option value="other">Other</option>
+    </select>
+
+    <textarea id="taskNote" class="w-full p-2 rounded text-black mb-3"
+      placeholder="Keterangan"></textarea>
+
+    <div class="flex gap-2">
+      <button onclick="submitTask()" class="bg-green-500 flex-1 py-2 rounded font-bold">Simpan</button>
+      <button onclick="closeModal()" class="bg-slate-700 flex-1 py-2 rounded">Batal</button>
+    </div>
+  </div>
 </div>
 
 <script>
@@ -147,302 +128,159 @@
 const todayObj = new Date();
 const today = todayObj.toISOString().split("T")[0];
 const year = todayObj.getFullYear();
-document.getElementById("today").innerText = "📅 " + today;
+todayEl.innerText = "📅 " + today;
 
 /* ================= FIREBASE ================= */
-const firebaseConfig = {
+firebase.initializeApp({
   apiKey: "AIzaSyAMMZ5nXovO8_KnWf3qTHTRsJXoeLsJHHI",
   authDomain: "ultra-degen-farmer.firebaseapp.com",
   databaseURL: "https://ultra-degen-farmer-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "ultra-degen-farmer"
-};
-firebase.initializeApp(firebaseConfig);
-
+});
 const auth = firebase.auth();
 const dbRoot = firebase.database();
 
-/* ================= STATE (DEFENSIVE) ================= */
+/* ================= STATE ================= */
 let userRef = null;
-let db = {
-  year,
-  tasks: [],
-  history: {},
-  reminder: null
-};
+let editTaskId = null;
+let db = { year, tasks: [], history: {}, reminder: null };
 
 /* ================= AUTH ================= */
-auth.onAuthStateChanged(user => {
-  if (!user) {
-    authBox.classList.remove("hidden");
-    app.classList.add("hidden");
-    return;
-  }
-
-  authBox.classList.add("hidden");
-  app.classList.remove("hidden");
-
-  userRef = dbRoot.ref("ultra_degen/" + user.uid);
-
-  userRef.on("value", snap => {
-    const data = snap.val() || {};
+auth.onAuthStateChanged(user=>{
+  if(!user){ authBox.classList.remove("hidden"); app.classList.add("hidden"); return; }
+  authBox.classList.add("hidden"); app.classList.remove("hidden");
+  userRef = dbRoot.ref("ultra_degen/"+user.uid);
+  userRef.on("value", snap=>{
+    const d = snap.val() || {};
     db = {
-      year: data.year || year,
-      tasks: Array.isArray(data.tasks) ? data.tasks : [],
-      history: data.history || {},
-      reminder: data.reminder || null
+      year: d.year || year,
+      tasks: Array.isArray(d.tasks) ? d.tasks : [],
+      history: d.history || {},
+      reminder: d.reminder || null
     };
     render();
   });
 });
-
-function signup(){
-  auth.createUserWithEmailAndPassword(email.value, password.value)
-    .catch(e => alert(e.message));
-}
-function signin(){
-  auth.signInWithEmailAndPassword(email.value, password.value)
-    .catch(e => alert(e.message));
-}
+function signup(){ auth.createUserWithEmailAndPassword(email.value,password.value).catch(e=>alert(e.message)); }
+function signin(){ auth.signInWithEmailAndPassword(email.value,password.value).catch(e=>alert(e.message)); }
 function logout(){ auth.signOut(); }
 
-/* ================= CORE ================= */
-function save(){
-  if(userRef) userRef.set(db);
-}
-
-/* ================= TASK ================= */
-let editTaskId = null;
-
-function submitTask(){
-  if(!db.tasks) db.tasks = [];
-
-  const name = taskName.value.trim();
-  const wallet = taskWallet.value.trim();
-  const link = taskLink.value.trim();
-  const type = taskType.value;
-  const note = taskNote.value.trim();
-
-  if(!name || !wallet){
-    alert("Nama & wallet wajib");
-    return;
-  }
-
-  // ✏️ MODE EDIT
-  if(editTaskId){
-    const task = db.tasks.find(t => t.id === editTaskId);
-    if(task){
-      task.name = name;
-      task.wallet = wallet;
-      task.link = link;
-      task.type = type;
-      task.note = note;
-    }
-    editTaskId = null;
-  }
-  // ➕ MODE ADD
-  else{
-    db.tasks.push({
-      id: crypto.randomUUID(),
-      name,
-      wallet,
-      link,
-      type,
-      note
-    });
-  }
-
-  // reset form
-  taskName.value = "";
-  taskWallet.value = "";
-  taskLink.value = "";
-  taskNote.value = "";
-
-  save();
-  closeModal();   // tutup modal DI SINI
-  render();
-}
-  
-  function editTask(id){
-  const task = db.tasks.find(t => t.id === id);
-  if(!task) return;
-
-  editTaskId = id;
-
-  taskName.value = task.name;
-  taskWallet.value = task.wallet;
-  taskLink.value = task.link || "";
-  taskType.value = task.type || "other";
-  taskNote.value = task.note || "";
-
-  openEditModal();
-}
-
-function toggleTask(id){
-  if(!db.history[today]) db.history[today] = {};
-  db.history[today][id] = !db.history[today][id];
-  save();
-  render();
-}
-
-function removeTask(id){
-  if(!confirm("Hapus garapan ini?")) return;
-  db.tasks = db.tasks.filter(t => t.id !== id);
-  save();
-  render();
-}
-  
-function openModal(){
-  // reset mode
+/* ================= MODAL ================= */
+function openAddModal(){
   editTaskId = null;
-
-  // reset form
-  taskName.value = "";
-  taskWallet.value = "";
-  taskLink.value = "";
+  modalTitle.innerText = "➕ Tambah Garapan";
+  taskName.value = taskWallet.value = taskLink.value = taskNote.value = "";
   taskType.value = "testnet";
-  taskNote.value = "";
-
-  // buka modal
   taskModal.classList.remove("hidden");
 }
-  
-  function openEditModal(){
+function editTask(id){
+  const t = db.tasks.find(x=>x.id===id); if(!t) return;
+  editTaskId = id;
+  modalTitle.innerText = "✏️ Edit Garapan";
+  taskName.value=t.name; taskWallet.value=t.wallet;
+  taskLink.value=t.link||""; taskType.value=t.type; taskNote.value=t.note||"";
   taskModal.classList.remove("hidden");
 }
-  
-  function closeModal(){
-  editTaskId = null;
-  taskModal.classList.add("hidden");
-}
+function closeModal(){ editTaskId=null; taskModal.classList.add("hidden"); }
+taskModal.onclick=e=>{ if(e.target===taskModal) closeModal(); };
 
-  taskModal.addEventListener("click", e => {
-  if(e.target === taskModal) closeModal();
-});
+/* ================= CRUD ================= */
+function submitTask(){
+  const name=taskName.value.trim(), wallet=taskWallet.value.trim();
+  if(!name||!wallet) return alert("Nama & wallet wajib");
+  if(editTaskId){
+    const t=db.tasks.find(x=>x.id===editTaskId);
+    Object.assign(t,{name,wallet,link:taskLink.value,type:taskType.value,note:taskNote.value});
+  }else{
+    db.tasks.push({id:crypto.randomUUID(),name,wallet,link:taskLink.value,type:taskType.value,note:taskNote.value});
+  }
+  save(); closeModal(); render();
+}
+function toggleTask(id){
+  if(!db.history[today]) db.history[today]={};
+  db.history[today][id]=!db.history[today][id];
+  save(); render();
+}
+function removeTask(id){
+  if(confirm("Hapus garapan?")){
+    db.tasks=db.tasks.filter(t=>t.id!==id);
+    save(); render();
+  }
+}
+function save(){ if(userRef) userRef.set(db); }
 
 /* ================= RENDER ================= */
 function render(){
-  activeTable.innerHTML = "";
-  completedTable.innerHTML = "";
-
-  let noActive = 1;
-  let noDone = 1;
-
-  db.tasks.forEach(t => {
-    const done = db.history[today]?.[t.id] || false;
-
+  activeTable.innerHTML=""; completedTable.innerHTML="";
+  let a=1,c=1;
+  db.tasks.forEach(t=>{
+    const done=db.history[today]?.[t.id];
     if(done){
-      completedTable.innerHTML += `
-        <tr class="border-t border-slate-700 text-green-400">
-          <td class="p-2 text-center">${noDone++}</td>
-          <td class="p-2">${t.name}</td>
-          <td class="p-2 text-center">${t.type}</td>
-          <td class="p-2">${t.note || "-"}</td>
-        </tr>
-      `;
-    } else {
-      activeTable.innerHTML += `
-        <tr class="border-t border-slate-700">
-          <td class="p-2 text-center">${noActive++}</td>
-          <td class="p-2">${t.name}</td>
-          <td class="p-2 text-center">
-            ${t.link ? `<a href="${t.link}" target="_blank" class="text-sky-400">Buka</a>` : "-"}
-          </td>
-          <td class="p-2 text-center">${t.type}</td>
-          <td class="p-2">${t.note || "-"}</td>
-          <td class="p-2 text-center flex gap-2 justify-center">
-            <input type="checkbox" onchange="toggleTask('${t.id}')">
-            <button onclick="editTask('${t.id}')" class="text-yellow-400">✏️</button>
-            <button onclick="removeTask('${t.id}')" class="text-red-400">🗑️</button>
-          </td>
-
-        </tr>
-      `;
+      completedTable.innerHTML+=`<tr class="border-t text-green-400">
+        <td class="p-2">${c++}</td><td class="p-2">${t.name}</td>
+        <td class="p-2">${t.type}</td><td class="p-2">${t.note||"-"}</td></tr>`;
+    }else{
+      activeTable.innerHTML+=`<tr class="border-t">
+        <td class="p-2">${a++}</td>
+        <td class="p-2">${t.name}</td>
+        <td class="p-2 text-center">${t.link?`<a href="${t.link}" target="_blank" class="text-sky-400">Buka</a>`:"-"}</td>
+        <td class="p-2">${t.type}</td>
+        <td class="p-2">${t.note||"-"}</td>
+        <td class="p-2 flex gap-2 justify-center">
+          <input type="checkbox" onchange="toggleTask('${t.id}')">
+          <button onclick="editTask('${t.id}')" class="text-yellow-400">✏️</button>
+          <button onclick="removeTask('${t.id}')" class="text-red-400">🗑️</button>
+        </td></tr>`;
     }
   });
-
   drawHeatmap();
 }
 
 /* ================= HEATMAP ================= */
 function drawHeatmap(){
-  monthHeatmap.innerHTML = "";
-  const months = ["Jan","Feb","Mar","Apr","Mei","Jun","Jul","Agu","Sep","Okt","Nov","Des"];
-
-  months.forEach((m, idx) => {
-    let count = 0;
-    Object.keys(db.history).forEach(d => {
-      const dt = new Date(d);
-      if(dt.getFullYear() === year && dt.getMonth() === idx){
-        count += Object.values(db.history[d]).filter(v => v).length;
-      }
+  monthHeatmap.innerHTML="";
+  ["Jan","Feb","Mar","Apr","Mei","Jun","Jul","Agu","Sep","Okt","Nov","Des"].forEach((m,i)=>{
+    let c=0;
+    Object.keys(db.history).forEach(d=>{
+      const dt=new Date(d);
+      if(dt.getFullYear()===year&&dt.getMonth()===i)
+        c+=Object.values(db.history[d]).filter(Boolean).length;
     });
-
-    let color = "bg-slate-700";
-    if(count > 0) color = "bg-green-900";
-    if(count > 10) color = "bg-green-600";
-    if(count > 30) color = "bg-green-400";
-
-    monthHeatmap.innerHTML += `
-      <div class="rounded-xl p-4 text-center ${color}">
-        <div class="font-bold">${m}</div>
-        <div class="text-xs">${count} done</div>
-      </div>
-    `;
+    monthHeatmap.innerHTML+=`<div class="p-4 rounded text-center ${c?"bg-green-600":"bg-slate-700"}">
+      <b>${m}</b><div class="text-xs">${c}</div></div>`;
   });
 }
 
 /* ================= REMINDER ================= */
 function setReminder(){
-  const time = reminderTime.value;
-  if(!time) return alert("Pilih jam dulu");
-  db.reminder = time;
-  save();
+  if(!reminderTime.value) return;
+  db.reminder=reminderTime.value; save();
   Notification.requestPermission();
 }
-
 setInterval(()=>{
-  if(!db.reminder) return;
-  const now = new Date().toTimeString().slice(0,5);
-  if(now === db.reminder){
-    new Notification("⏰ Waktunya Farming, Degen!");
-  }
+  if(db.reminder && new Date().toTimeString().slice(0,5)===db.reminder)
+    new Notification("⏰ Waktunya Farming!");
 },60000);
 
 /* ================= CSV ================= */
 function exportCSV(){
-  let csv = "name,wallet,link,type\n";
-  db.tasks.forEach(t=>{
-    csv += `"${t.name}","${t.wallet}","${t.link||""}","${t.type}"\n`;
-  });
-  const a = document.createElement("a");
-  a.href = URL.createObjectURL(new Blob([csv],{type:"text/csv"}));
-  a.download = "ultra_degen_tasks.csv";
-  a.click();
+  let csv="name,wallet,link,type,note\n";
+  db.tasks.forEach(t=>csv+=`"${t.name}","${t.wallet}","${t.link||""}","${t.type}","${t.note||""}"\n`);
+  const a=document.createElement("a");
+  a.href=URL.createObjectURL(new Blob([csv],{type:"text/csv"}));
+  a.download="ultra_degen_tasks.csv"; a.click();
 }
-
 function importCSV(){
-  const file = csvFile.files[0];
-  if(!file) return;
-
-  const reader = new FileReader();
-  reader.onload = e => {
-    const lines = e.target.result.split("\n").slice(1);
-    lines.forEach(l => {
-      const [name,wallet,link,type] = l.replace(/"/g,"").split(",");
-      if(name && wallet){
-        db.tasks.push({
-          id: crypto.randomUUID(),
-          name,
-          wallet,
-          link,
-          type: type || "other"
-        });
-      }
+  const f=csvFile.files[0]; if(!f) return;
+  const r=new FileReader();
+  r.onload=e=>{
+    e.target.result.split("\n").slice(1).forEach(l=>{
+      const [n,w,lx,t,no]=l.replace(/"/g,"").split(",");
+      if(n&&w) db.tasks.push({id:crypto.randomUUID(),name:n,wallet:w,link:lx,type:t||"other",note:no||""});
     });
-    save();
-    render();
+    save(); render();
   };
-  reader.readAsText(file);
+  r.readAsText(f);
 }
 </script>
 
